# Syscall-Proxy

./: .gitignore  .gitmodules  ActiveBreach.sln  ActiveBreach.vcxproj  ActiveBreach.vcxproj.filters  CMakeLists.txt  Compile.bat  HookBypass.sln  HookBypass.vcxproj  HookBypass.vcxproj.filters  README.md  TECH.md  USAGE.md
C/: ActiveBreach.c  ActiveBreach.h  C.vcxproj  C.vcxproj.filters  Example.cpp  Stub.asm
C++/: ActiveBreach.cpp  ActiveBreach.hpp  C++.vcxproj  C++.vcxproj.filters  Example.cpp  Test.cpp
C++/C++ Tests/: C++ Tests.vcxproj  C++ Tests.vcxproj.filters  Main.cpp
C++/C++ Tests/Suite/: page.cpp  page.h
C++/Include/: ActiveBreach.cpp  ActiveBreach.hpp
C/C Tests/: Infra.h  Main.cpp  Tests.vcxproj  Tests.vcxproj.filters
C/C Tests/Container/: AbThunk.c  SysInfo.cpp  XtraArgs.c
C/Include/: ActiveBreach.c  ActiveBreach.h
Include/: ActiveBreach.c  ActiveBreach.h  C.vcxproj  C.vcxproj.filters
Junk/Int/C Tests_Release_x64/: ActiveBreach_C_TEST.exe.recipe
Lab/: AB_TEST.vcxproj  AB_TEST.vcxproj.filters  C_test.cpp  test.cpp
Lab/AB_TEST/: AB_TEST.sln  AB_TEST.vcxproj  AB_TEST.vcxproj.filters  C_test.cpp
Rust/: bench.txt  benchmark_umlockfree.txt  cargo.toml
Rust/crypto/: crypter.go
Rust/src/: lib.rs
Rust/test/: entry.rs
Rust/testrunner/: Cargo.toml
Rust/tests/: Cargo.toml
Rust/tests/src/: main.rs
Tests/: Infra.h  Main.cpp  Tests.vcxproj  Tests.vcxproj.filters
Tests/Container/: Mem.cpp  Memory.c  Memory.cpp  SysInfo.cpp  Threading.cpp  XtraArgs.c
src/: IC.c  IC.cpp  framework.h  framework.hpp  loader.cpp  master.cpp  stub.cpp
(+20 files in other folders)
